# diy_driverless_car_ROS

./: .gitignore  LICENSE  RC_Car_End_to_End_Image_Regression_with_CNNs_(RGB_camera).ipynb  README.md
rbcar_twist2ack/: CMakeLists.txt  package.xml  setup.py
rbcar_twist2ack/src/rbcar_twist2ack/: twist2ack.py
rover_2dnav/: CMakeLists.txt  package.xml
rover_2dnav/maps/: office_24mar.pgm  office_24mar.yaml  patio_16mar.pgm  patio_16mar.yaml  patio_23feb.pgm  patio_23feb.yaml  walker.pgm  walker.yaml  wg_map.pgm  wg_map.yaml
rover_2dnav/planning/: base_local_planner_params.yaml  base_local_planner_params_teb.yaml  costmap_common_params.yaml  (+5 more)
rover_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rover_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rover_description/launch/: description.launch  description.launch~
rover_description/urdf/: decorations.urdf.xacro  macros.xacro  racecar.gazebo  racecar.xacro  rover.urdf.xacro  rover.urdf.xacro~  wheel.urdf.xacro  wheel.urdf.xacro~  yetiborg.urdf. bak.xacro~  yetiborg.urdf.xacro~
rover_description/urdf/accessories/: camera.urdf.xacro  camera.urdf.xacro~  kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
rover_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rover_ml/: bagutils.py  rosbag_to_csv.py
rover_motors/: 99-arduino-uno.rules  rover_motors.ino  rover_motors.ino~
rover_teleop/: CMakeLists.txt  package.xml
rover_webcam/: .gitignore  .travis.yml  CMakeLists.txt  package.xml  setup.py  webcam_rviz.rviz
(+247 files in other folders)
